sqlite/conformance/sqlite-sqltests/snapshots/fullscan_steps__fullscan-covering-index-scan-tags-next-p5.snap
---
source: fullscan_steps.sqltest
expression: SELECT a FROM t ORDER BY a;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - fullscan_schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN t USING COVERING INDEX ta

BYTECODE
addr  opcode       p1  p2  p3  p4      p5  comment
   0  Init          0   7   0           0  Start at 7
   1  OpenRead      0   3   0  k(2,B)   0  index=ta, root=3, iDb=0
   2  Rewind        0   6   0           0  Rewind index ta
   3    Column      0   0   1           0  r[1]=ta.a
   4    ResultRow   1   1   0           0  output=r[1]
   5  Next          0   3   0           1
   6  Halt          0   0   0           0
   7  Transaction   0   1   2           0  iDb=0 tx_mode=Read
   8  Goto          0   1   0           0
