sqlite/conformance/sqlite-sqltests/snapshots/fullscan_steps__indexed-range-search-not-tagged-fullscan.snap
---
source: fullscan_steps.sqltest
expression: SELECT * FROM t WHERE a > 5;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - fullscan_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t USING INDEX ta (a>?)

BYTECODE
addr  opcode          p1  p2  p3  p4        p5  comment
   0  Init             0  11   0             0  Start at 11
   1  OpenRead         0   2   0  k(3,B,B)   0  table=t, root=2, iDb=0
   2  OpenRead         1   3   0  k(2,B)     0  index=ta, root=3, iDb=0
   3  Integer          5   3   0             0  r[3]=5
   4  SeekGT           1  10   3             0  key=[3..3]
   5    DeferredSeek   1   0   0             0
   6    Column         1   0   1             0  r[1]=ta.a
   7    Column         0   1   2             0  r[2]=t.b
   8    ResultRow      1   2   0             0  output=r[1..2]
   9  Next             1   5   0             0
  10  Halt             0   0   0             0
  11  Transaction      0   1   2             0  iDb=0 tx_mode=Read
  12  Goto             0   1   0             0
